...
    <TextView
    android:id="@+id/no_offline_map"
    style="@style/TextAppearance.AppCompat.Headline"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:text="@string/no_offline_map_downloaded_yet"
    android:textColor="@android:color/white"
    android:visibility="gone"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/offline_maps_title" />

    <com.getbase.floatingactionbutton.FloatingActionButton
        android:id="@+id/store_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openMapForOfflineDownload"
        app:fab_colorNormal="@color/colorPrimary"
        app:fab_colorPressed="@color/asbestos"
        app:fab_icon="@drawable/ic_add_white_24dp"
...
