<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item type="id" name="dialog_textfield_id" />
</resources>